@@ -1,5 +1,10 @@
 2004-07-07  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktreeview.c: 
+	* gtk/gtktreeview.h: Small documentation fixes.
+
+2004-07-07  Matthias Clasen  <mclasen@redhat.com>
+
 	Support separators in combo boxes and more generally in tree 
 	views  (#135873):
 	
